# cpp-emulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flappy_bird.slug  hello_world1.slug  hello_world2.slug  hello_world3.slug  snake.slug
include/: console.hpp  constants.hpp  cpu.hpp  gpu.hpp  instruction.hpp  memory.hpp
src/: CMakeLists.txt  console.cpp  cpu.cpp  gpu.cpp  instruction.cpp  main.cpp  memory.cpp
